@@ -1,3 +1,7 @@
+2006-04-09  Florian Boor <florian@kernelconcepts.de>
+
+    * globals.h, main.c: Remove some unneeded stuff and fix some checks.
+
 2006-04-08  Florian Boor <florian@kernelconcepts.de>
 
     * gpe-windowlist.desktop.in.in: Honor prefix. 
